Uploaded new resume/fixed some wordings

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         Hello! I'm <span class="text-blue">Sajal Baral</span>&nbsp;<span class="wave">👋🏼</span>
                     </h1>
                     <p class="about-me__info--para">
-                        I am a <strong class="text--blue">frontend</strong> software engineer with a passion for
+                        I am a <strong class="text--blue">frontend</strong> developer with a passion for
                         building web applications that are responsive
                         and performant to deliver the best user experience!
                     </p>
