--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="mailto:sajalsbaral@gmail.com" target="_blank" class="about-me__link">
                             <i class="far fa-envelope"></i>
                         </a>
-                        <a href="./assets/Resume.pdf" target="_blank" class="about-me__link">
+                        <a href="./assets/" target="_blank" class="about-me__link">
                             <i class="fas fa-file-pdf"></i>
                         </a>
                     </div>
